public/stylesheets/style.css
/* vermelho da3546 */
/* azul eff7fc*/
/*http://www.google.com.br/imgres?imgurl=http://www.ftg.com.br/english/img/mapa_brasil.jpg&imgrefurl=http://www.ftg.com.br/english/representantes.html&usg=__DxzMilhaqmZk9Yi34tPs-XrxmPo=&h=400&w=425&sz=22&hl=en&start=0&tbnid=KdT5_ak90YWpkM:&tbnh=167&tbnw=165&prev=/images%3Fq%3Dmapa%2Bbrasil%26um%3D1%26hl%3Den%26client%3Dfirefox-a%26sa%3DN%26rls%3Dorg.mozilla:pt-BR:official%26biw%3D1229%26bih%3D831%26tbs%3Disch:10%2C361&um=1&itbs=1&iact=rc&dur=350&ei=uiZPTJG6MYGDnQfYuLS_Bw&page=1&ndsp=24&ved=1t:429,r:23,s:0&biw=1229&bih=831*/
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-weight: inherit;
	font-style: inherit;
	font-size: 100%;
	font-family: inherit;
	vertical-align: baseline;
}
/* remember to define focus styles! */
:focus {
	outline: 0;
}
body {
	line-height: 1;
	color: black;
	background: white;
}
ol, ul {
	list-style: none;
}
/* tables still need 'cellspacing="0"' in the markup */
table {
	border-collapse: separate;
	border-spacing: 0;
}
caption, th, td {
	text-align: left;
	font-weight: normal;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: "";
}
blockquote, q {
	quotes: "" "";
}

body{
	font-family: helvetica;
	background-color: #eff7fc;
}

#main{
	background: url('/images/bg.png') repeat-x;
	width: 100%;
}

#main_inner{
	background: url('/images/bg2.png') repeat-x;
	width: 100%;
	height:190px;
}

.container{
	width: 960px;
	margin: 0 auto;
}

#menu{
	background: url('/images/menu.png') ;
	height: 70px;
	position: relative;
	top: 25px;
}

ul#menu_top{
	position: relative;
	top: 30px;
	right: 50px;
}

ul#menu_top li a{
	float: right;
	color:#da3546;
	font-weight: bold;
	margin-right: 25px;
	text-decoration: none;
}

ul#menu_top li a:hover{
	color: #eff7fc;
}

#pic{
	background: url('/images/pic.jpg') no-repeat;
	height: 403px;
	margin-top: 90px;
}

#intro{
	left:90px;
	position:relative;
	top:-30px;
	float: left;
}

#intro p{
	color: #ffffff;
	font-size: 12px;
	font-weight: bold;
}

#intro p strong{
	font-size: 18px;
	font-weight: bold;
	color: #111111;
	display: block;
	margin-bottom: 4px;
}

#breadcrumb{
	background:url('/images/breadcrumb.png') repeat scroll 0 0 transparent;
	height:70px;
	position:relative;
	top:33px;
}

#howto{
	background: url('/images/howto.png') repeat;
	float:right;
	height: 197px;
	position:relative;
	top:20px;
	width:388px;
}

#twitter{
	background:url("/images/twitter.png") repeat scroll 0 0 transparent;
	float:right;
	height:180px;
	left:392px;
	position:relative;
	top:238px;
	width:377px;
}

#most_recent_events{
	float: left;
	margin-right:40px;
}

#most_recent_events p strong,
#most_recent_comments p strong{
	font-size: 12px;
	color: #da3546;
	font-weight: bold;
}

.event{
	background: url('/images/event_bg.png') no-repeat;
	width: 578px;
	height: 115px;
	padding: 20px;
	position: relative;
}

.head{
	margin-bottom: 40px;
}

#comments{
	background:url("/images/black.png") repeat scroll 0 0 transparent;
	float:right;
	height:403px;
	width: 262px;
	padding: 20px;
}

.event p strong{
	font-weight: bold;
	color: #da3546;
	font-size: 15px !important;
}

.event p{
	color: #111111;
	font-size: 14px;
}

.more{
	cursor: pointer;
	cursor: hand;
	margin-right: 10px;
}

.event a{
	font-size: 12px;
	color: #da3546;
}

.event a:link, .event a:visited{
	text-decoration: none;
}

.event a:hover, .event a:active{
	text-decoration: underline;
	color: #da3546;
	background-color: #ffffff;
}

.buttons{
	position:absolute;
	top:95px;
}

.buttons iframe {
  position: relative;
  top: 5px;
  padding-right: 5px;
}

#content{
	margin-top:80px;
}

.borda_vinho{
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border: 5px solid #b24450;
}

.comment p{
	color: #ffffff;
	font-size: 12px;
	font-weight: bold;
}

.comment p small{
	font-size: 9px;
	font-weight: bold;
	color: #da3546;
}

.comment_pic{
	float: left;
	margin-right: 10px;
}

.comment{
	margin-top: 15px;
}

.all{
	float: right;
	font-weight: bold;
	font-size: 12px;
	color: #da3546 !important;
	margin-top: 20px;
}

.all:hover, .all:active{
	text-decoration: underline;
}

.prop_link{
	font-size: 12px;
	color: #da3546;
}
.prop_link span{
	color: #111111;
}

#footer{
	background: url('/images/bg_footer.png');
	height: 273px;
}

.auth_icon {
  display: block;
  width: 32px;
  height: 32px;
  text-indent: -9999px;
  bottom: 10px;
  position: relative;
}

.facebook_auth {
  background: url('/images/auth/facebook_32.png');
}

.twitter_auth {
  background: url('/images/auth/twitter_32.png');
}

#footer_cols{
	padding-top:28px;
	font-size: 11px;
	color: #ffffff;
}

#footer_a{
	float: left;
	width: 320px;
}

#copyright{
	text-align: center;
	font-size: 10px;
	color: #ffffff;
  background-color: #111;
}

#copyright strong{
	font-weight: bold;
}

#proposal{
	background: url('/images/proposal_black.png');
	width: 281px;
	height: 540px;
	margin-top: 80px;
	padding: 10px;
	margin-bottom: 20px;
}

#proposal_list{
	left:20px;
	margin-top:67px;
	padding:19px;
	position:relative;
	float: left;
}

.logo{
	-moz-border-radius:15px;
	-webkit-border-radius:15px;
	border: 10px solid #b24450;
	position: relative;
	top: 18px;
	left: 34px;
}

.linha{
	margin-top: 30px;
	margin-left: 25px;
}

#proposal p{
	font-size: 12px;
	color: #ffffff;
	margin-left: 35px;
}

#proposal p strong{
	font-weight: bold;
	color: #da3546;
	font-size: 14px;
}

.prop{
	background:url("/images/proposal_bg.png") repeat scroll 0 0 transparent;
	height:176px;
	margin-bottom:10px;
	padding:20px;
	width:581px;
	position: relative;
}

.prop p strong, .sub_vote{
	font-weight: bold;
	color: #da3546;
	font-size: 15px;
}

.prop p{
	color: #111111;
	font-size: 14px;
}

.prop_sub{
	position:absolute;
	top:140px;
}

.prop_sub img{
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border: 5px solid #b24450;
}

.prop_sub small{
	color: #da3546;
	font-size: 12px;
	font-weight: bold;
	margin-right:200px;
}

.prop_sub a:link, .prop_sub a:visited{
	font-size: 12px;
	color: #da3546;
	text-decoration: none;
}

.prop_sub a:hover, .prop_sub a:active{
	text-decoration: underline;
	color: #da3546;
	background-color: #ffffff;
}

.thumb{
	border: 0 !important;
}

.organizer{
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border: 3px solid #b24450;
	left:200px;
	position:relative;
}

#left_bar{
	float: left;
}

